vlib/v/checker/tests/run/array_init_inline_literal_it.run.out
vlib/v/checker/tests/run/array_init_inline_literal_it.vv:2:42: error: unexpected number `0`, expecting name
    1 | fn main() {
    2 |     arr := []int{len: 2, init: [4][it] or { 0 }}
      |                                             ^
    3 |     println(arr)
    4 | }
